added moviecard element

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,17 +1,17 @@
 .navbar > a{
     display: inline-block;
     box-sizing: border-box;
-    width: 70px;
+    width: 90px;
     padding: 5px;
     margin: 0 6px 6px;
-    background: lightblue;
+    background: yellow;
     text-decoration: none;
     text-align: center;
     font-size: min(10vw, 15px) ;
-    color: black;
+    color: red;
 }
   
 a.active {
-    background: black;
-    color: white;
+    background: red;
+    color: yellow;
 }
