moved form from funfacts to movie

--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ article > h3 {
 
 form {
     border: 1px solid black;
-    background-color: red;
+    background-color: goldenrod;
     box-sizing: border-box;
     margin-left: 400px;
     margin-right: 400px;
